1. 新增 GeneratedKeyStrategy，用于区分 JDBC batch、批量 generated keys、多 values 结果集、逐条执行等插入路径 2. 调整 InsertSqlDialect，将 insert 支持判断、SQL 生成和 generated key 策略选择下沉给方言实现 3. 重构 EntityInsertImpl 的批量插入流程，按方言策略选择 batch、逐条执行或多 values ResultSet 回填 4. 支持 SQL Server 通过 OUTPUT INSERTED 处理多行插入主键回填 5. 更新 insert builder 及相关方言测试